--- a/index.html
+++ b/index.html
@@ -1,24 +1,44 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>NASA API</title>
+<meta charset="utf-8"/>
+<meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>🚀 NASA DAY IMAGE 🌎👩‍🚀</title>
+
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
+
+<link rel="stylesheet" type="text/css" id="applicationStylesheet" href="css/style.css"/>
+<script id="applicationScript" type="text/javascript" src="js/style.js"></script>
 </head>
 <body>
-    <header>    
-    <h1><img id="logo" src="https://www.nasa.gov/sites/all/themes/custom/nasatwo/images/nasa-logo.svg" alt="nasa logo">NASA Today Image |  
-    </h1>
-    <h3 id="title">
-    </h3>
-    </header>
-<main>
-    <img id="image" />
-    <div id="content">
-    </div>
-</main>
-    <script src="script.js"></script>
+	<div id="indexhtml">
+		<svg class="topo">
+			<rect id="topo" rx="0" ry="0" x="0" y="0" width="1920" height="200">
+			</rect>
+		</svg>
+		<svg class="rodape">
+			<rect id="rodape" rx="0" ry="0" x="0" y="0" width="1920" height="200">
+			</rect>
+		</svg>
+		<img id="picture" src="" alt="">
+		<div id="player" src=""></div>
+		<div id="title">
+			
+		</div>
+		<div id="date">
+		</div>
+		<div id="explanation">	
+		</div>	
+		<img id="picture_nasa_blur" src="assets/picture_nasa.png" srcset="assets/picture_nasa.png 1x">
+		<img id="picture_nasa" src="assets/picture_nasa.png" srcset="assets/picture_nasa.png 1x">
+		<div id="title_page">
+			<span>NASA Image of the Day</span>
+		</div>
+	</div>
+	<script type="text/javascript" src="js/config.js"></script>
+	<script type="text/javascript" src="js/script.js"></script>
 </body>
 </html>
